--- a/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Системно по подразбиране",
 	"Settings_Audio_Current_Setting_Unknown": "(Понастоящем избраното устройство не е налично)",
 	"Settings_Audio_HDMIGain": "Намаляване на подсилвания звук от VIVE HDMI аудио",
+	"Settings_Audio_SpeakerJackOutput": "Говорител/3,5 мм изходящ жак",
+	"Settings_Audio_SpeakerJackOutput_Title": "Позволява едновременно възпроизвеждане на аудио посредством 3,5-мм жак и високоговорителите над ушите.",
+	"Settings_Audio_Single": "Единично",
+	"Settings_Audio_Dual": "Двойно",
 	"Settings_SectionTitle_Advanced": "Разширени",
 	"Settings_SectionTitle_Developer": "Разработчик",
 	"Settings_SectionTitle_Dashboard": "Табло",
