--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Dle systému",
 	"Settings_Audio_Current_Setting_Unknown": "(vybrané zařízení nebylo nalezeno)",
 	"Settings_Audio_HDMIGain": "Zmenšení dynamického rozsahu signálu HTC VIVE – HDMI audio",
+	"Settings_Audio_SpeakerJackOutput": "Sluchátko / výstup 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Umožňuje přehrávání zvuku zároveň skrze výstup 3,5 mm a nepřímá sluchátka",
+	"Settings_Audio_Single": "Neduplikovat",
+	"Settings_Audio_Dual": "Duplikovat",
 	"Settings_SectionTitle_Advanced": "Pokročilé",
 	"Settings_SectionTitle_Developer": "Pro vývojáře",
 	"Settings_SectionTitle_Dashboard": "Hlavní obrazovka",
