--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Den valgte enhed kan ikke spores)",
 	"Settings_Audio_HDMIGain": "Forstærkningsreduktion til på VIVE HDMI-lyd",
+	"Settings_Audio_SpeakerJackOutput": "Højtaler/3,5 mm jackoutput",
+	"Settings_Audio_SpeakerJackOutput_Title": "Tillader lyd gennem både 3,5 mm jackstikket og off-ear-høretelefoner",
+	"Settings_Audio_Single": "Enkelt",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "Avanceret",
 	"Settings_SectionTitle_Developer": "Udvikler",
 	"Settings_SectionTitle_Dashboard": "Instrumentbræt",
@@ -331,8 +335,8 @@
 	"Settings_Drivers_UnblockAllTip": "BEMÆRK: Det anbefales at fjerne blokeringen fra én tilføjelse af gangen.",
 	"Settings_Drivers_SomeBlocked": "På grund af et nyligt nedbrud vil nogle SteamVR-tilføjelser automatisk blive blokeret.",
 	"Settings_CurrentOpenXRRuntime_None": "Ingen",
-	"Settings_CurrentOpenXRRuntime": "Aktuel OpenXR-kørsel:",
-	"Settings_SetAsOpenXRRuntime": "Angiv SteamVR som OpenXR-kørsel",
+	"Settings_CurrentOpenXRRuntime": "Aktuel kørsel af OpenXR:",
+	"Settings_SetAsOpenXRRuntime": "Angiv SteamVR som kørsel af OpenXR",
 	"OpenXR_AnotherSteamVR": "En anden kopi af SteamVR",
 	"OpenXR_SteamVR": "SteamVR",
 	"OpenXR_None": "Ingen",
