--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Järjestelmän oletus",
 	"Settings_Audio_Current_Setting_Unknown": "(Valittua laitetta ei pystytä havaitsemaan)",
 	"Settings_Audio_HDMIGain": "VIVE HDMI -äänen vahvistuksen vähennys",
+	"Settings_Audio_SpeakerJackOutput": "Kaiutin/kuulokeliitäntä: 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Mahdollistaa äänen yhtäaikaa 3,5-millisen liitännän ja off-ear-kaiuttimien kautta.",
+	"Settings_Audio_Single": "Yksittäinen",
+	"Settings_Audio_Dual": "Pari",
 	"Settings_SectionTitle_Advanced": "Lisäasetukset",
 	"Settings_SectionTitle_Developer": "Kehittäjä",
 	"Settings_SectionTitle_Dashboard": "Työpöytä",
