--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Paramètres système par défaut",
 	"Settings_Audio_Current_Setting_Unknown": "(Le périphérique sélectionné n'est pas détecté)",
 	"Settings_Audio_HDMIGain": "Réduction de gain sur la sortie audio HDMI du VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Écouteurs externes/prise jack de 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Retransmettre l'audio à la fois dans les écouteurs externes et au périphérique branché à la prise jack de 3,5 mm.",
+	"Settings_Audio_Single": "Unique",
+	"Settings_Audio_Dual": "Double",
 	"Settings_SectionTitle_Advanced": "Avancé",
 	"Settings_SectionTitle_Developer": "Développeur",
 	"Settings_SectionTitle_Dashboard": "Tableau de bord",
