--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Aktuell ausgewähltes Gerät nicht gefunden)",
 	"Settings_Audio_HDMIGain": "Verstärkungsreduzierung für VIVE HDMI-Audio",
+	"Settings_Audio_SpeakerJackOutput": "Lautsprecher/3,5-mm-Klinkenstecker",
+	"Settings_Audio_SpeakerJackOutput_Title": "Ermöglicht simultanes Audio sowohl über 3,5-mm-Klinkenstecker als auch über Off-Ear-Kopfhörer",
+	"Settings_Audio_Single": "Einzel",
+	"Settings_Audio_Dual": "Doppelt",
 	"Settings_SectionTitle_Advanced": "Erweitert",
 	"Settings_SectionTitle_Developer": "Entwickler",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
