--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Rendszer-alapértelmezett",
 	"Settings_Audio_Current_Setting_Unknown": "(A jelenleg kiválasztott eszköz nincs jelen)",
 	"Settings_Audio_HDMIGain": "Erősítéscsökkentés a VIVE HDMI hangon",
+	"Settings_Audio_SpeakerJackOutput": "Hangszóró / 3,5 mm-es csatlakozókimenet",
+	"Settings_Audio_SpeakerJackOutput_Title": "Engedélyezi a 3,5 mm-es csatlakozón és a fület nem érintő fejhallgatón keresztüli egyidejű hangot.",
+	"Settings_Audio_Single": "Egyedüli",
+	"Settings_Audio_Dual": "Kettős",
 	"Settings_SectionTitle_Advanced": "Haladó",
 	"Settings_SectionTitle_Developer": "Fejlesztői",
 	"Settings_SectionTitle_Dashboard": "Műszerfal",
