--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Impostazione predefinita",
 	"Settings_Audio_Current_Setting_Unknown": "(Il dispositivo selezionato non è presente)",
 	"Settings_Audio_HDMIGain": "Riduzione del guadagno sull'audio HDMI VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Altoparlante/Uscita jack da 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Consente l'audio simultaneo tramite il jack da 3,5 mm e gli altoparlanti esterni",
+	"Settings_Audio_Single": "Singolo",
+	"Settings_Audio_Dual": "Doppio",
 	"Settings_SectionTitle_Advanced": "Avanzate",
 	"Settings_SectionTitle_Developer": "Sviluppatore",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
