--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "システムデフォルト",
 	"Settings_Audio_Current_Setting_Unknown": "（現在選択されているデバイスは存在しません）",
 	"Settings_Audio_HDMIGain": "VIVE HDMIオーディオのゲインリダクション",
+	"Settings_Audio_SpeakerJackOutput": "Speaker / 3.5mm Jack Output",
+	"Settings_Audio_SpeakerJackOutput_Title": "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
+	"Settings_Audio_Single": "Single",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "詳細",
 	"Settings_SectionTitle_Developer": "開発者",
 	"Settings_SectionTitle_Dashboard": "ダッシュボード",
