--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "시스템 기본값",
 	"Settings_Audio_Current_Setting_Unknown": "(현재, 선택한 디바이스는 존재하지 않습니다)",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 오디오 게인 감소",
+	"Settings_Audio_SpeakerJackOutput": "스피커 / 3.5mm 잭 출력",
+	"Settings_Audio_SpeakerJackOutput_Title": "3.5mm 잭과 귀에 닿지 않는 오프 이어(off-ear) 스피커를 통한 동시 오디오를 사용할 수 있습니다.",
+	"Settings_Audio_Single": "싱글",
+	"Settings_Audio_Dual": "듀얼",
 	"Settings_SectionTitle_Advanced": "고급",
 	"Settings_SectionTitle_Developer": "개발자",
 	"Settings_SectionTitle_Dashboard": "대시보드",
