--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Valgt enhet er utilgjengelig)",
 	"Settings_Audio_HDMIGain": "Forsterkningsreduksjon på VIVE HDMI-lyd",
+	"Settings_Audio_SpeakerJackOutput": "Høyttaler/3,5 mm jackplugg",
+	"Settings_Audio_SpeakerJackOutput_Title": "Gjør det mulig å spille av lyd samtidig gjennom både 3,5 mm jackplugg og ørehøyttalerne",
+	"Settings_Audio_Single": "Enkelt",
+	"Settings_Audio_Dual": "Dobbelt",
 	"Settings_SectionTitle_Advanced": "Avansert",
 	"Settings_SectionTitle_Developer": "Utvikler",
 	"Settings_SectionTitle_Dashboard": "Dashbord",
