--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Domyślne systemowe",
 	"Settings_Audio_Current_Setting_Unknown": "(obecnie wybrane urządzenie nie jest obecne)",
 	"Settings_Audio_HDMIGain": "Redukcja wzmocnienia sygnału wyjściowego VIVE HDMI Audio",
+	"Settings_Audio_SpeakerJackOutput": "Głośnik/wyjście 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Pozwala na równoczesne odtwarzanie dźwięku przez wejście 3,5 mm oraz głośniki przyuszne.",
+	"Settings_Audio_Single": "Pojedyncze",
+	"Settings_Audio_Dual": "Podwójne",
 	"Settings_SectionTitle_Advanced": "Zaawansowane",
 	"Settings_SectionTitle_Developer": "Programistyczne",
 	"Settings_SectionTitle_Dashboard": "Panel główny",
