--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Predefinição do sistema",
 	"Settings_Audio_Current_Setting_Unknown": "(O dispositivo selecionado não está presente)",
 	"Settings_Audio_HDMIGain": "Redução de ganho no áudio HDMI do VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Saída de altifalante/conector de 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Permite simultaneamente o áudio pelo conector de 3,5 mm e pelos altifalantes",
+	"Settings_Audio_Single": "Única",
+	"Settings_Audio_Dual": "Dupla",
 	"Settings_SectionTitle_Advanced": "Avançado",
 	"Settings_SectionTitle_Developer": "Desenvolvedor",
 	"Settings_SectionTitle_Dashboard": "Painel",
