--- a/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
 	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
+	"Settings_Audio_SpeakerJackOutput": "Difuzor / Mufă de 3.5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Permite audiția simultană atât prin mufa de 3,5 mm cât și prin căști",
+	"Settings_Audio_Single": "Singur",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "Avansate",
 	"Settings_SectionTitle_Developer": "Dezvoltator",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
