--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -48,13 +48,17 @@
 	"Settings_BaseStationSettings": "Настройки базовых станций",
 	"Settings_Audio_Playback_Automatic_Label": "Устройство вывода звука",
 	"Settings_Audio_Recording_Automatic_Label": "Устройство ввода звука",
-	"Settings_Audio_Headset": "Гарнитура",
+	"Settings_Audio_Headset": "Шлем",
 	"Settings_Audio_Manual": "Ручная настройка",
 	"Settings_Audio_Mirroring_Label": "Отражение звука",
 	"Settings_Audio_Mirroring_Independent_Volume_Label": "Отдельная громкость дублируемого звука (бета)",
 	"Settings_Audio_Default": "По умолчанию",
 	"Settings_Audio_Current_Setting_Unknown": "(выбранное устройство отсутствует)",
-	"Settings_Audio_HDMIGain": "Функция снижения усиления на аудио-интерфейсе HDMI VIVE",
+	"Settings_Audio_HDMIGain": "Снижение усиления у аудиоинтерфейса HDMI VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Динамики / разъём 3,5 мм",
+	"Settings_Audio_SpeakerJackOutput_Title": "Одновременное воспроизведение звука через разъём 3,5 мм и внеушные динамики",
+	"Settings_Audio_Single": "Одиночное",
+	"Settings_Audio_Dual": "Двойное",
 	"Settings_SectionTitle_Advanced": "Расширенные",
 	"Settings_SectionTitle_Developer": "Разработчик",
 	"Settings_SectionTitle_Dashboard": "Главное меню",
