--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "系统默认值",
 	"Settings_Audio_Current_Setting_Unknown": "（当前选择的设备不存在）",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 音频的增益衰减",
+	"Settings_Audio_SpeakerJackOutput": "扬声器 / 3.5 mm 插孔输出",
+	"Settings_Audio_SpeakerJackOutput_Title": "允许同时通过 3.5 mm 插孔和离耳扬声器播放音频",
+	"Settings_Audio_Single": "单",
+	"Settings_Audio_Dual": "双",
 	"Settings_SectionTitle_Advanced": "高级",
 	"Settings_SectionTitle_Developer": "开发者",
 	"Settings_SectionTitle_Dashboard": "主面板",
@@ -193,8 +197,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "彩色重影",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透明穿透",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透明穿透",
-	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
+	"Settings_Camera_RoomView3D_Experimental": "房间视角 3D 尚处于试验阶段。",
+	"Settings_Camera_RoomView3D_Unsupported": "此头戴式显示器/系统配置不支持房间视角 3D。",
 	"Settings_CameraTest": "测试摄像头和性能",
 	"Settings_StartCameraTest": "开始测试",
 	"CameraTest_CheckingCamera": "正在检查摄像头…",
@@ -330,13 +334,13 @@
 	"Settings_Drivers_UnblockAll": "取消所有屏蔽",
 	"Settings_Drivers_UnblockAllTip": "注意：建议每次取消一个加载项的屏蔽并测试。",
 	"Settings_Drivers_SomeBlocked": "由于最近的崩溃，某些 SteamVR 加载项已被自动屏蔽。",
-	"Settings_CurrentOpenXRRuntime_None": "None",
-	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
-	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
-	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"Settings_CurrentOpenXRRuntime_None": "无",
+	"Settings_CurrentOpenXRRuntime": "当前 OpenXR 运行时：",
+	"Settings_SetAsOpenXRRuntime": "将 SteamVR 设置为 OpenXR 运行时",
+	"OpenXR_AnotherSteamVR": "SteamVR 的另一副本",
 	"OpenXR_SteamVR": "SteamVR",
-	"OpenXR_None": "None",
-	"OpenXR_Error": "Error Finding Runtime",
+	"OpenXR_None": "无",
+	"OpenXR_Error": "查找运行时过程中发生错误",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "测试控制器 %1$s",
