--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Predeterminado del sistema",
 	"Settings_Audio_Current_Setting_Unknown": "(El dispositivo seleccionado actualmente no está presente)",
 	"Settings_Audio_HDMIGain": "Reducción de ganancia en el audio HDMI de VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Salida de altavoz / Conector de 3,5 mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Permite audio simultáneo a través del conector de 3,5 mm y los altavoces externos",
+	"Settings_Audio_Single": "Única",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "Avanzado",
 	"Settings_SectionTitle_Developer": "Desarrollador",
 	"Settings_SectionTitle_Dashboard": "Menú principal",
