--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Vald enhet är ej närvarande)",
 	"Settings_Audio_HDMIGain": "Förstärkningsminskning på VIVE HDMI-ljud",
+	"Settings_Audio_SpeakerJackOutput": "Högtalare / 3,5 mm-uttag för output",
+	"Settings_Audio_SpeakerJackOutput_Title": "Gör det möjligt att spela upp ljud både genom 3,5 mm-uttaget och off-ear-högtalarna",
+	"Settings_Audio_Single": "Enkel",
+	"Settings_Audio_Dual": "Dubbel",
 	"Settings_SectionTitle_Advanced": "Avancerat",
 	"Settings_SectionTitle_Developer": "Utvecklare",
 	"Settings_SectionTitle_Dashboard": "Instrumentpanel",
@@ -193,7 +197,7 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Färgade silhuetter",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Genomskinlig genomströmning",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ogenomskinlig genomströmning",
-	"Settings_Camera_RoomView3D_Experimental": "Rumsvy i 3D är experimentell.",
+	"Settings_Camera_RoomView3D_Experimental": "Rumsvyn i 3D är experimentell.",
 	"Settings_Camera_RoomView3D_Unsupported": "Rumsvy i 3D stöds inte av detta headset/denna systemkonfigurering.",
 	"Settings_CameraTest": "Testa kamera och prestanda",
 	"Settings_StartCameraTest": "Påbörja test",
@@ -330,12 +334,12 @@
 	"Settings_Drivers_UnblockAll": "Ta bort alla blockeringar",
 	"Settings_Drivers_UnblockAllTip": "OBS: Det rekommenderas att du ta bort en blockering och testar ett tillägg i taget.",
 	"Settings_Drivers_SomeBlocked": "På grund av en krasch som skedde nyligen, har vissa SteamVR-tillägg automatiskt blockerats.",
-	"Settings_CurrentOpenXRRuntime_None": "None",
+	"Settings_CurrentOpenXRRuntime_None": "Ingen",
 	"Settings_CurrentOpenXRRuntime": "Nuvarande OpenXR Runtime:",
 	"Settings_SetAsOpenXRRuntime": "Ställ in SteamVR som OpenXR Runtime",
 	"OpenXR_AnotherSteamVR": "En till kopia av SteamVR",
 	"OpenXR_SteamVR": "SteamVR",
-	"OpenXR_None": "None",
+	"OpenXR_None": "Ingen",
 	"OpenXR_Error": "Kunde inte hitta Runtime",
 	"OpenXR_OculusRuntime": "Oculus",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
