--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "系統預設",
 	"Settings_Audio_Current_Setting_Unknown": "（目前所選的裝置不存在）",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 音訊的增益衰減",
+	"Settings_Audio_SpeakerJackOutput": "喇叭 / 3.5mm 耳機輸出孔",
+	"Settings_Audio_SpeakerJackOutput_Title": "允許同時透過 3.5mm 耳機輸出孔和離耳喇叭播音",
+	"Settings_Audio_Single": "單聲道",
+	"Settings_Audio_Dual": "雙聲道",
 	"Settings_SectionTitle_Advanced": "進階",
 	"Settings_SectionTitle_Developer": "開發人員",
 	"Settings_SectionTitle_Dashboard": "主控台",
