--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "ค่าเริ่มต้นระบบ",
 	"Settings_Audio_Current_Setting_Unknown": "(อุปกรณ์ที่เลือกไว้ไม่พร้อมใช้งานในขณะนี้)",
 	"Settings_Audio_HDMIGain": "การลดทอนค่า Gain บนสัญญาณเสียง HDMI ของ Vive",
+	"Settings_Audio_SpeakerJackOutput": "ลำโพง / เอาต์พุตช่องเสียบหูฟังขนาด 3.5 มม.",
+	"Settings_Audio_SpeakerJackOutput_Title": "ทำให้สามารถรับฟังเสียงผ่านทั้งช่องเสียบหูฟังขนาด 3.5 มม. และลำโพงนอกหูได้พร้อม ๆ กัน",
+	"Settings_Audio_Single": "เดี่ยว",
+	"Settings_Audio_Dual": "คู่",
 	"Settings_SectionTitle_Advanced": "ขั้นสูง",
 	"Settings_SectionTitle_Developer": "ผู้พัฒนา",
 	"Settings_SectionTitle_Dashboard": "กระดานรวม",
