--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
 	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
+	"Settings_Audio_SpeakerJackOutput": "Speaker / 3.5mm Jack Output",
+	"Settings_Audio_SpeakerJackOutput_Title": "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
+	"Settings_Audio_Single": "Single",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "Gelişmiş",
 	"Settings_SectionTitle_Developer": "Geliştirici",
 	"Settings_SectionTitle_Dashboard": "Pano",
