--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Стандарт системи",
 	"Settings_Audio_Current_Setting_Unknown": "(наразі вибраний пристрій відсутній)",
 	"Settings_Audio_HDMIGain": "Зниження посилення в аудіоінтерфейсі HDMI VIVE",
+	"Settings_Audio_SpeakerJackOutput": "Динамік / аудіороз’єм 3,5 мм",
+	"Settings_Audio_SpeakerJackOutput_Title": "Дозволяє одночасний вивід звуку через динаміки й аудіороз’єм 3,5 мм",
+	"Settings_Audio_Single": "Одиничний",
+	"Settings_Audio_Dual": "Подвійний",
 	"Settings_SectionTitle_Advanced": "Розширені",
 	"Settings_SectionTitle_Developer": "Розробник",
 	"Settings_SectionTitle_Dashboard": "Панель навігації",
