--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Mặc định cho hệ thống",
 	"Settings_Audio_Current_Setting_Unknown": "(Thiết bị được chọn hiện tại không có)",
 	"Settings_Audio_HDMIGain": "Giảm khuếch đại trên VIVE HDMI Audio",
+	"Settings_Audio_SpeakerJackOutput": "Phát âm cả loa / jack âm thanh 3.5mm",
+	"Settings_Audio_SpeakerJackOutput_Title": "Cho phép âm thanh từ cả 2 tín hiệu ra với bộ loa cách tai và jack âm thanh 3.5mm",
+	"Settings_Audio_Single": "Đơn",
+	"Settings_Audio_Dual": "Đôi",
 	"Settings_SectionTitle_Advanced": "Nâng cao",
 	"Settings_SectionTitle_Developer": "Nhà phát triển",
 	"Settings_SectionTitle_Dashboard": "Trang tổng quan",
