--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -55,6 +55,10 @@
 	"Settings_Audio_Default": "Systeemstandaard",
 	"Settings_Audio_Current_Setting_Unknown": "(Momenteel geselecteerde apparaat is niet gevonden)",
 	"Settings_Audio_HDMIGain": "Versterkingsvermindering voor VIVE HDMI-audio",
+	"Settings_Audio_SpeakerJackOutput": "Speaker / 3.5mm Jack Output",
+	"Settings_Audio_SpeakerJackOutput_Title": "Allows simultaneous audio through both the 3.5mm jack and the off-ear speakers",
+	"Settings_Audio_Single": "Single",
+	"Settings_Audio_Dual": "Dual",
 	"Settings_SectionTitle_Advanced": "Geavanceerd",
 	"Settings_SectionTitle_Developer": "Ontwikkelaar",
 	"Settings_SectionTitle_Dashboard": "Dashboard",
