1600466902 | 20 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_bulgarian.json,  M resources/webinterface/dashboard/localization/vrmonitor_brazilian.json,  M resources/webinterface/dashboard/localization/vrmonitor_french.json,  M resources/webinterface/dashboard/localization/vrmonitor_latam.json,  M resources/webinterface/dashboard/localization/vrmonitor_schinese.json,  M resources/webinterface/dashboard/localization/vrmonitor_swedish.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.htm
https://steamdb.info/patchnotes/5565291/

--- a/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
@@ -288,7 +288,7 @@
   "BindingUI_Save_Public": "Споделяне на тази комбинация с останалите потребители.",
   "BindingUI_Save_Export": "Запазване на комбинация към documents/steamvr/input/exports",
   "BindingUI_Save_ReplaceDefault": "Запазване на комбинация върху тази по подразбиране за съответното приложение",
-  "BindingUI_Save_AddNewDefault": "Този тип контролер ще бъде добавен към манифест файла за действията.",
+  "BindingUI_Save_AddNewDefault": "Този тип контролер ще бъде добавен към манифест файла с действията.",
   "BindingUI_EditPageTitle": "Редактиране на %1$s",
   "BindingUI_ViewPageTitle": "Преглеждане на %1$s",
   "BindingUI_PageSubTitle": "%3$s за %1$s в %2$s",
@@ -342,7 +342,7 @@
   "BindingUI_SelectAction_Required": "Изисквано",
   "BindingUI_SelectAction_Suggested": "Препоръчано",
   "SaveError_BindingWriteFailed": "Неуспешно записване на файла за комбинациите. Дали няма защита срещу запис?",
-  "SaveError_ActionManifestWriteFailed": "Неуспешно записване на манифест файла за действията. Дали няма защита срещу запис?",
+  "SaveError_ActionManifestWriteFailed": "Неуспешно записване на манифест файла с действия. Дали няма защита срещу запис?",
   "AppSelect_Title": "Настройки на контролера",
   "AppSelect_CurrentApp": "Текущото приложение",
   "AppSelect_LastRunApp": "Последното пускано приложение",
@@ -392,8 +392,8 @@
   "InputDebugger_SecondaryActionSetName": "Второстепенен набор от действия",
   "InputDebugger_Device": "Ограничаване до устройство",
   "InputDebugger_Priority": "Приоритет",
-  "InputDebugger_ActionManifestFailed": "Невъзможно зареждане на манифест за действия",
-  "InputDebugger_ActionManifestLoading": "Зареждане на манифест за действия",
+  "InputDebugger_ActionManifestFailed": "Невъзможно зареждане на манифест с действия",
+  "InputDebugger_ActionManifestLoading": "Зареждане на манифест с действия",
   "InputDebugger_NoActions": "Приложението няма действия",
   "InputDebugger_FilterDetails": "Подробности за филтъра",
   "InputDebugger_FilterState_Title": "Състояние на филтъра за %1$s",
