--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -335,8 +335,8 @@
 	"Settings_Drivers_UnblockAllTip": "AVISO: recomendamos desbloquear e testar um módulo por vez.",
 	"Settings_Drivers_SomeBlocked": "Devido a um travamento recente, alguns módulos do SteamVR foram bloqueados automaticamente.",
 	"Settings_CurrentOpenXRRuntime_None": "Nenhum",
-	"Settings_CurrentOpenXRRuntime": "Implementação do OpenXR em uso:",
-	"Settings_SetAsOpenXRRuntime": "Usar SteamVR como implementação do OpenXR",
+	"Settings_CurrentOpenXRRuntime": "Componente de tempo de execução do OpenXR em uso:",
+	"Settings_SetAsOpenXRRuntime": "Usar SteamVR como componente de tempo de execução do OpenXR",
 	"OpenXR_AnotherSteamVR": "Outra cópia do SteamVR",
 	"OpenXR_SteamVR": "SteamVR",
 	"OpenXR_None": "Nenhum",
