--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -197,8 +197,8 @@
 	"Settings_Camera_RoomViewStyle_EdgeB": "Silhouettes colorées",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Vue translucide",
 	"Settings_Camera_RoomViewStyle_VideoOpaque": "Vue opaque",
-	"Settings_Camera_RoomView3D_Experimental": "Room View 3D is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "Room View 3D is not supported on this headset / system configuration.",
+	"Settings_Camera_RoomView3D_Experimental": "La vue de la pièce en 3D est une fonctionnalité expérimentale.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vue de la pièce en 3D n'est pas prise en charge sur ce casque ou cette machine.",
 	"Settings_CameraTest": "Tester la caméra et les performances",
 	"Settings_StartCameraTest": "Commencer le test",
 	"CameraTest_CheckingCamera": "Vérification de la caméra...",
@@ -334,14 +334,14 @@
 	"Settings_Drivers_UnblockAll": "Tout débloquer",
 	"Settings_Drivers_UnblockAllTip": "REMARQUE : nous vous recommandons de débloquer et de tester une extension à la fois.",
 	"Settings_Drivers_SomeBlocked": "En raison d'un plantage récent, certaines extensions de SteamVR ont été bloquées automatiquement.",
-	"Settings_CurrentOpenXRRuntime_None": "None",
-	"Settings_CurrentOpenXRRuntime": "Current OpenXR Runtime:",
-	"Settings_SetAsOpenXRRuntime": "Set SteamVR as OpenXR Runtime",
-	"OpenXR_AnotherSteamVR": "Another copy of SteamVR",
+	"Settings_CurrentOpenXRRuntime_None": "Aucun",
+	"Settings_CurrentOpenXRRuntime": "Environnement d'exécution OpenXR actuel :",
+	"Settings_SetAsOpenXRRuntime": "Définir SteamVR comme environnement d'exécution actuel d'OpenXR",
+	"OpenXR_AnotherSteamVR": "Une autre copie de SteamVR",
 	"OpenXR_SteamVR": "SteamVR",
-	"OpenXR_None": "None",
-	"OpenXR_Error": "Error Finding Runtime",
-	"OpenXR_OculusRuntime": "Oculus",
+	"OpenXR_None": "Aucun",
+	"OpenXR_Error": "Impossible de trouver l'environnement d'exécution.",
+	"OpenXR_OculusRuntime": "Oculus ",
 	"OpenXR_WindowsMixedReality": "Windows Mixed Reality",
 	"TestControllerTitle": "Test du contrôleur %1$s",
 	"TestController_NoController": "Allumez un contrôleur pour le tester."
