--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -55,8 +55,8 @@
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Vald enhet är ej närvarande)",
 	"Settings_Audio_HDMIGain": "Förstärkningsminskning på VIVE HDMI-ljud",
-	"Settings_Audio_SpeakerJackOutput": "Högtalare / 3,5 mm-uttag för output",
-	"Settings_Audio_SpeakerJackOutput_Title": "Gör det möjligt att spela upp ljud både genom 3,5 mm-uttaget och off-ear-högtalarna",
+	"Settings_Audio_SpeakerJackOutput": "Högtalare / 3,5 mm-anslutning för ljudutgång",
+	"Settings_Audio_SpeakerJackOutput_Title": "Gör det möjligt att spela upp ljud både genom 3,5 mm-anslutningen och off-ear-högtalarna",
 	"Settings_Audio_Single": "Enkel",
 	"Settings_Audio_Dual": "Dubbel",
 	"Settings_SectionTitle_Advanced": "Avancerat",
