--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -56,7 +56,7 @@
 	"Settings_Audio_Current_Setting_Unknown": "(El dispositivo seleccionado actualmente no está presente)",
 	"Settings_Audio_HDMIGain": "Reducción de ganancia en el audio HDMI de VIVE",
 	"Settings_Audio_SpeakerJackOutput": "Altavoz / Conector de salida de 3.5 mm",
-	"Settings_Audio_SpeakerJackOutput_Title": "Permite audio simultáneo a través del conector de 3.5 mm y los auriculares externos",
+	"Settings_Audio_SpeakerJackOutput_Title": "Permite audio simultáneo a través del conector de 3.5 mm y los altavoces externos",
 	"Settings_Audio_Single": "Único",
 	"Settings_Audio_Dual": "Doble",
 	"Settings_SectionTitle_Advanced": "Avanzado",
